@@ -94,7 +94,7 @@ public final class DefensiveStrategyImpl implements Strategy {
 		final var gift = new Gift(giftedResources, totalCoins);
 		final var clans = StreamUtils.getCitiesAsStream(this.graph).map(ICity::getClan).distinct()
 				.filter(a -> a != clan).sorted(Comparator.comparingDouble(a -> this.object.getRelationship(a, clan)))
-				.collect(Collectors.toList());
+				.toList();
 		// Improve relationship, start from the one with the worst relationship.
 		for (final var otherClan : clans) {
 			if (Math.random() < 0.75) {
