@@ -50,7 +50,7 @@ final class LevelInfo extends JFrame implements WindowListener {
 		this.addWindowListener(this);
 		final var assocs = new DefaultListModel<ClanColorAssociation>();
 		assocs.addAll(game.getClans().stream().map(a -> new ClanColorAssociation(a.getName(), a.getColor()))
-				.collect(Collectors.toList()));
+				.toList());
 		final var jlist = new JList<>(assocs);
 		jlist.setCellRenderer(new ListCellRenderer<>() {
 			private final Map<ClanColorAssociation, JLabel> map = new HashMap<>();
@@ -107,7 +107,7 @@ final class LevelInfo extends JFrame implements WindowListener {
 		this.add(scrollPane);
 		this.add(selectPanel);
 		final var allConfigurationPanels = ServiceLoader.load(ConfigurationPanelProvider.class).stream()
-				.map(Provider::get).filter(a -> a.forClass(game.getClass()).isPresent()).collect(Collectors.toList());
+				.map(Provider::get).filter(a -> a.forClass(game.getClass()).isPresent()).toList();
 		if (!allConfigurationPanels.isEmpty()) {
 			this.add(this.buildConfigurationPanel(allConfigurationPanels, game.getClass()));
 		}
